--- a/index.html
+++ b/index.html
@@ -8,9 +8,13 @@
   </head>
   <body>
 
-    <div class="container">
-      
+    <div class="score">
+      <h2 id="green-score">Green Score: 0</h2>
+      <h2 id="red-score">Red Score: 0</h2>
     </div>
+
+    <div class="container"></div>
+
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script type="text/javascript" src="main.js"></script>
