--- a/index.html
+++ b/index.html
@@ -8,8 +8,12 @@
   </head>
   <body>
 
+
+
     <div class="score">
+
       <h2 id="green-score">Green Score: 0</h2>
+      <div class="modal-container"></div>
       <h2 id="red-score">Red Score: 0</h2>
     </div>
 
