aggiunta di controlli vari

--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
     </div>
 
     <div class="container"></div>
+    <div class="lose">
+      <h2>Hai perso!</h2>
+    </div>
 
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
